# GenAI-4-AgenticWorkflows

./: README.md
Basics/CREW_BASICS/: Crew_v0.ipynb
CrewAI/: readme.md  requirements.txt
CrewAI/EmailMeetingPreparation/: run_file.txt
CrewAI/PrepMate AI/: readme.md  requirements.txt
CrewAI/research_writer_agent/: agents.py  crew.py  output.md  task.py  tools.py
CrewAI/test_tools/: email_draft.txt  send_email_sendgrid_tool.py  send_text_file.py  smtp_email_tool.py  twilio_tool_test.py
InvehicleAgents/: conversationalAgent_ImageProcessing.py  mood_llmV2.py  music_suggestion_llm_streamingV2.py
InvehicleAgents/ImageUnderstanding/: app.py  requirements.txt  videoAnalyst.py
InvehicleAgents/ImageUnderstandingNIMs/: app.py  conversationalAgent.py  imageAnalyst.py  videoAnalyst.py
Knowledge_Graph/: Knowledge_Graph.ipynb
Langgraph/OCR_AI_Agent/: README.md  main.py  pyproject.toml  requirements.txt
Langgraph/OCR_AI_Agent/additions/model_usage/: azureopenai.py  chatinit.py  testgroq.py
Langgraph/OCR_AI_Agent/additions/quickstart_langgraph/: quickstrt.py
Langgraph/OCR_AI_Agent/myAgentTools/: all_tools.py
NVDIAA2F_RAG_Fastapi_Agents/: app.py  gradio_app.py  main.py  ollama_test.py  ollama_test_chatprompt.py  requirements.txt  test_knowledge_workers.py
NVDIAA2F_RAG_Fastapi_Agents/avatar/: avatar_main.py
NVDIAA2F_RAG_Fastapi_Agents/knowledgeworkers/: worker_foodad.py  worker_hr.py  worker_tourgd.py  worker_wirebond.py  workers_main.py
NVDIAA2F_RAG_Fastapi_Agents/utils/: asr.py
RFC_response/: streamlit_app.py  test_script.py
phiData/: requirements.txt
(+93 files in other folders)
